--- a/src/武侠/架构.md
+++ b/src/武侠/架构.md
@@ -260,14 +260,14 @@ sequenceDiagram
 
 从 `App.tsx` 提取的状态管理逻辑，遵循 React Hooks 最佳实践：
 
-| Hook                 | 职责                       | 主要状态/功能                          |
-| -------------------- | -------------------------- | -------------------------------------- |
-| `useDebugLogs`       | 调试日志管理               | `debugLogs`, `addDebugLog`, `clearDebugLogs` |
-| `useToast`           | Toast 提示管理             | `toastState`, `showToast`, `hideToast` |
-| `usePageFlow`        | 页面流程状态               | `currentPage`, `handleStart`, `handleNewGame` |
-| `useGameState`       | 游戏状态管理               | `gameState`, `readGameData`, `DEFAULT_GAME_STATE` |
-| `useEventListeners`  | 事件监听逻辑               | `MESSAGE_RECEIVED`, `CHAT_CHANGED`, `era:writeDone` |
-| `useMessageHandler`  | 消息发送处理               | `handleSendMessage`, 消息流控制        |
+| Hook                | 职责           | 主要状态/功能                                       |
+| ------------------- | -------------- | --------------------------------------------------- |
+| `useDebugLogs`      | 调试日志管理   | `debugLogs`, `addDebugLog`, `clearDebugLogs`        |
+| `useToast`          | Toast 提示管理 | `toastState`, `showToast`, `hideToast`              |
+| `usePageFlow`       | 页面流程状态   | `currentPage`, `handleStart`, `handleNewGame`       |
+| `useGameState`      | 游戏状态管理   | `gameState`, `readGameData`, `DEFAULT_GAME_STATE`   |
+| `useEventListeners` | 事件监听逻辑   | `MESSAGE_RECEIVED`, `CHAT_CHANGED`, `era:writeDone` |
+| `useMessageHandler` | 消息发送处理   | `handleSendMessage`, 消息流控制                     |
 
 **使用示例**:
 
@@ -286,15 +286,15 @@ function App() {
 
 从 `GamePanels.tsx` 拆分的独立面板组件：
 
-| 组件               | 行数  | 职责                     |
-| ------------------ | ----- | ------------------------ |
-| `EmptyState`       | ~20   | 共用空状态提示           |
-| `CharacterPanel`   | ~280  | 角色信息（含 StatBar、Attribute） |
-| `MartialArtsPanel` | ~230  | 功法列表与详情           |
-| `InventoryPanel`   | ~125  | 背包物品管理             |
-| `EventsPanel`      | ~80   | 事件列表                 |
-| `SocialPanel`      | ~145  | 社交关系                 |
-| `MapPanel`         | ~10   | 地图显示                 |
+| 组件               | 行数 | 职责                              |
+| ------------------ | ---- | --------------------------------- |
+| `EmptyState`       | ~20  | 共用空状态提示                    |
+| `CharacterPanel`   | ~280 | 角色信息（含 StatBar、Attribute） |
+| `MartialArtsPanel` | ~230 | 功法列表与详情                    |
+| `InventoryPanel`   | ~125 | 背包物品管理                      |
+| `EventsPanel`      | ~80  | 事件列表                          |
+| `SocialPanel`      | ~145 | 社交关系                          |
+| `MapPanel`         | ~10  | 地图显示                          |
 
 #### 3.6.3. 分类日志工具 (`utils/logger.ts`)
 
@@ -311,15 +311,15 @@ gameLogger.error('游戏状态错误:', error);
 
 **日志类别**:
 
-| 类别      | 前缀 | 用途           |
-| --------- | ---- | -------------- |
-| `init`    | 🎮   | 初始化流程     |
-| `message` | 💬   | 消息处理       |
-| `event`   | 📡   | 事件监听       |
-| `game`    | 🎯   | 游戏状态       |
-| `api`     | 🌐   | API 调用       |
-| `ui`      | 🖼️   | UI 组件        |
-| `data`    | 📊   | 数据读取/解析  |
+| 类别      | 前缀 | 用途          |
+| --------- | ---- | ------------- |
+| `init`    | 🎮    | 初始化流程    |
+| `message` | 💬    | 消息处理      |
+| `event`   | 📡    | 事件监听      |
+| `game`    | 🎯    | 游戏状态      |
+| `api`     | 🌐    | API 调用      |
+| `ui`      | 🖼️    | UI 组件       |
+| `data`    | 📊    | 数据读取/解析 |
 
 **特性**:
 - 生产环境 (`NODE_ENV !== 'development'`) 自动禁用所有日志
@@ -369,9 +369,10 @@ getAllVariables() 返回:
 
 ### 4.2. 玩家属性结构
 
-- **初始属性**（4维）: 臂力、根骨、机敏、洞察 - 开局固定
-- **当前属性**（7维）: 含悟性、风姿、福缘 - 可成长
-- **战斗/资源属性**: 前端根据初始属性+境界+功法实时计算
+- **初始属性** (`InitialAttributes`): 开局设定的七维属性（臂力, 根骨, 机敏, 悟性, 洞察, 风姿, 福缘），后续基本固定。
+- **当前属性** (`CurrentAttributes`): 战斗中实时变化的五维属性（臂力, 根骨, 机敏, 悟性, 洞察），不包含风姿和福缘。
+- **战斗/资源属性**: 气血、内力等由前端根据当前属性、境界、功法实时计算。
+- **注意**: 所有属性的键名（key）均为中文，以保持变量表的统一性。
 
 ### 4.3. 变量映射表
 
@@ -379,7 +380,7 @@ getAllVariables() 返回:
 | ----------------------------- | ---------------------------- | ------------ |
 | `stat_data.user数据`          | `PlayerData`                 | 玩家完整信息 |
 | `stat_data.user数据.功法`     | `Record<string, MartialArt>` | 已学功法     |
-| `stat_data.user数据.初始属性` | `InitialAttributes`          | 六维初始属性 |
+| `stat_data.user数据.初始属性` | `InitialAttributes`          | 七维初始属性 |
 | `stat_data.事件系统`          | `EventSystem`                | 事件系统     |
 
 > **注意**: 功法和包裹中可能包含 `$template` 模板字段，解析时需过滤
